# tiralabra

./: .coveragerc  .pylintrc  README.md  pyproject.toml
.github/: REPORT_1.md  REQUIREMENTS.md
.github/docs/: IMPLEMENTATION.md  REPORT_1.md  REPORT_2.md  REPORT_3.md  REPORT_4.md  REPORT_5.md  REPORT_6.md  REQUIREMENTS.md  TESTING.md  USAGE.md
.github/workflows/: lint.yml  test.yml
src/: index.py  ui.py
src/classes/: exceptions.py  queue.py  rpn_evaluator.py  shunting_yard.py  stack.py  token_list.py  tokenizer.py
src/utils/: printers.py
tests/: queue_test.py  rpn_evaluator_advanced_test.py  rpn_evaluator_basic_test.py  shunting_yard_advanced_test.py  shunting_yard_basic_test.py  stack_test.py  test_printers.py  test_queue.py  token_list_test.py  tokenizer_test.py
