[tool.poetry]
name = "tiralabra"
version = "1.0.0"
description = "Scientific Calculator using the Shunting-yard algorithm"
authors = ["LeeviHalme <29179759+LeeviHalme@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.4"
pytest = "^7.4.4"
coverage = "^7.4.0"
pylint = "^3.0.3"

[tool.poe.tasks]
cli = "poetry run python3 src/index.py" # CLI startup script
test = "pytest" # run tests
lint = "pylint src" # lint the code
_coverage_run = "coverage run --branch -m pytest"
_coverage_html = "coverage html"
coverage = ["_coverage_run", "_coverage_html"] # generate coverage report HTML file

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
